--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,65 @@
 /** Style **/
 
-.nav-link {
-    color: black;
-    font-size: 12pt;
-    text-decoration: none;
+html {
+    font-size: 62.5%;
 }
 
 li.active a {
+    color: #10c9c3;
+}
+
+h1 {
+    font-size: 3.8rem;
+}
+
+/** Class **/
+
+.nav-link {
+    color: black;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.monserrat {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.myriad {
+    font-family: "Myriad Pro", serif;
+}
+
+.button {
+    margin-top: 43px;
+    margin-bottom: 201px;
+    width: 180px;
+    height: 54px;
+    color: #fff;
+    background-color: #10c9c3;
+    border: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    transition: .7s;
+}
+
+/** ID **/
+
+#container {
+    background-color: #e9e9e9;
+}
+
+#design {
+    margin-top: 190px;
+}
+
+#new-design {
+    margin-top: 40px;
+    font-size: 1.8rem;
+}
+
+/** Effects **/
+
+button:hover {
+    background-color: #fff;
     color: #10c9c3;
 }
