--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ h2 {
     background-color: #e9e9e9;
 }
 
+.blue-bg {
+    background-color: #10c9c3;
+}
+
 .pro-skills {
     margin-top: 41px;
     text-transform: uppercase;
@@ -65,6 +69,19 @@ h2 {
     background-color: #d8d8d8;
     height: 3px;
     width: 501px;
+}
+
+.font {
+    font-size: 5.0rem;
+}
+
+.figure-font {
+    font-size: 1.8rem;
+}
+
+.stats-font {
+    font-size: 1.2rem;
+    text-transform: uppercase;
 }
 
 /** ID **/
@@ -125,6 +142,10 @@ h2 {
 
 #progressBar {
     margin-bottom: 164px;
+}
+
+#ul-margin {
+    margin: 100px 0;
 }
 
 /** Effects **/
