--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2 {
     font-family: "Myriad Pro", serif;
 }
 
-.button {
+.button-contact {
     margin-top: 43px;
     margin-bottom: 201px;
     width: 180px;
@@ -82,6 +82,47 @@ h2 {
 .stats-font {
     font-size: 1.2rem;
     text-transform: uppercase;
+}
+
+.container-img {
+    position: relative;
+    width: 337px;
+    height: 300px;
+}
+
+.work-img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.button-work {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 180px;
+    height: 54px;
+    color: #fff;
+    background-color: #10c9c3;
+    border: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    transition: .7s;
+}
+
+.middle {
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /** ID **/
@@ -157,4 +198,12 @@ a:hover {
 button:hover {
     background-color: #fff;
     color: #10c9c3;
+}
+
+.container-img:hover .work-img {
+    opacity: .3;
+}
+
+.container-img:hover .middle {
+    opacity: 1;
 }
