--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,33 @@ h2 {
     margin: 100px 0;
 }
 
+#load {
+    height: 100px;
+}
+
+#load-more {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+#process {
+    font-size: 3.0rem;
+    font-weight: bold;
+}
+
+#process-para {
+    font-size: 1.6rem;
+}
+
+#processpara {
+    margin-top: 40px;
+    margin-bottom: 57px;
+}
+
+#video {
+    margin-bottom: 100px;
+}
+
 /** Effects **/
 
 a:hover {
