--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,44 +24,16 @@ h2 {
     margin-top: 102px;
 }
 
- #text-area {
-     height: 170px;
- }
-
 /** Class **/
 
-.nav-link {
-    color: black;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-.grey-bg {
-    background-color: #e9e9e9;
-}
-
-.blue-bg {
-    background-color: #10c9c3;
-}
-
 .pro-skills {
-    margin-top: 41px;
-    text-transform: uppercase;
+    margin-top: 40px;
 }
 
 .progress-bar-grey {
     background-color: #d8d8d8;
     height: 3px;
-    width: 501px;
-}
-
-.font {
-    font-size: 5.0rem;
-}
-
-.stats-font {
-    text-transform: uppercase;
+    width: 500px;
 }
 
 .container-img {
@@ -135,9 +107,9 @@ h2 {
     margin: 40px 0 100px 0;
 }
 
-#skills {
-    margin-top: 166px;
-}
+/*#skills {*/
+/*    margin-top: 166px;*/
+/*}*/
 
 #half-grey {
     background-color: #e9e9e9;
@@ -161,9 +133,9 @@ h2 {
     width: 65%;
 }
 
-#progressBar {
-    margin-bottom: 164px;
-}
+/*#progressBar {*/
+/*    margin-bottom: 160px;*/
+/*}*/
 
 #bow {
     font-weight: bold;
