--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -36,6 +36,9 @@ $grey: #e9e9e9;
   transition: .7s;
 }
 
+// Work Process
+
+
 // Services
 .services {
   @include margin(margin, 100, 0, 100, 0);
@@ -46,20 +49,54 @@ $grey: #e9e9e9;
   }
 }
 
-// Testimonials
+ //Testimonials
 .carousel-sec {
   min-height: 100%;
   overflow: hidden;
-
   .carousel-item {
     @include absolutePosition(absolute, 50%, 50%);
-    .carousel-div {
-      min-height: 100%;
-      .carousel-quotes {
-        font-weight: bold;
-      }
+    .author {
+      margin-top: 40px;
     }
   }
+}
+
+.carousel-fade .carousel-inner .carousel-item {
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .carousel-item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.carousel-fade .carousel-control {
+  z-index: 2;
+}
+
+.carousel-indicators .active {
+  @include dimension(height, width, 15px, 20px);
+  margin: 0;
+  @include back($white, none, 4px);
+}
+.carousel-indicators li {
+  @include dimension(height, width, 15px, 20px);
+  margin: 0;
+  @include back($white, none, 4px);
+  @include skew();
 }
 
 // Contact
@@ -155,12 +192,46 @@ $grey: #e9e9e9;
 
 // Works
 #works {
-  min-height: 600px;
+  height: 600px;
   .row {
-    min-height: 600px;
+    height: 100%;
+
+    .img-container {
+      position: relative;
+      @include dimension(height, width, 300px, 50%);
+      transition: .7s;
+      .image-img {
+        display: block;
+        @include dimension(height, width, 100%, 100%);
+        .btn-div {
+          @include absolutePosition(absolute, 0, 0);
+          @include dimension(height, width, 100%, 100%);
+          background-color: rgba(0, 0, 0, 0.6);
+          opacity: 0;
+          transition: opacity 0.5s;
+          .btn-project {
+            @include absolutePosition(absolute, 50%, 50%);
+            @include dimension(height, width, 54px, 180px);
+            @include button($white, $blue, none, uppercase);
+            transition: .7s;
+          }
+        }
+        .btn-div:hover {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
+@media (max-width: 768px) {
+  #works {
+    height: 600px * 2;
+    .row {
+      min-height: 100%;
+    }
+  }
+}
 
 #load {
   height: height(100px);
@@ -171,6 +242,7 @@ $grey: #e9e9e9;
 
 // Process
 #process {
+  margin-top: 100px;
   font-weight: bold;
 }
 #processpara {
@@ -178,12 +250,16 @@ $grey: #e9e9e9;
 
 }
 #video {
+  @include dimension(height, width, 570px, 100%);
   @include margin(margin, 0, 0, 100, 0);
 }
 
 // Contact
+#need {
+  margin-top: 100px;
+}
+
 #first-name, #last-name, #title {
-  /*width: 320px;*/
   height: height(45px);
 }
 
